# cpp-flocking

./: .gitignore  .travis.yml  CMakeLists.txt  GLFloor.cpp  GLFloor.h  GLPath.cpp  GLPath.h  GLQuadTree.cpp  GLQuadTree_Node.cpp  GLQuadTree_Node.h  GLRole.cpp  GLRole_Predator.cpp  GLRole_Predator.h  GLRole_Prey.cpp  GLRole_Prey.h  GLRole_Unknown.cpp  GLSteering.cpp  GLSteering.h  GLSteering_Alignment.cpp  GLSteering_Alignment.h  GLSteering_Avoidance.cpp  GLSteering_Cohesion.cpp  GLSteering_Composite.cpp  GLSteering_Evade.cpp  GLSteering_Flee.cpp  GLSteering_Interpose.cpp  GLSteering_OffsetPursuit.cpp  GLSteering_PathFollow.cpp  GLSteering_Pursuit.cpp  GLSteering_Seek.cpp  GLSteering_Separation.cpp  GLSteering_WallAvoidance.cpp  GLSteering_Wander.cpp  GameEntity.cpp  GameEntity.h  GameWorld.cpp  GameWorld.h  MovingEntity.cpp  MovingEntity.h  Obstacle.cpp  (+5 more)
